Netlify | Fix issue with multiple config files

--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 import OpenGraph from './OpenGraph.astro';
 import NetlifyIdentity from './NetlifyIdentity.astro';
-import '@styles/site.css';
+import '@styles/global.css';
 
 const { title = '' } = Astro.props;
 ---
