Text | Lighten pink everywhere

--- a/src/components/LinkBlurb.astro
+++ b/src/components/LinkBlurb.astro
@@ -13,7 +13,7 @@ const { title = '', href = '#' } = Astro.props;
   </p>
   <div>
     <a
-      class="text-shadow block font-base antialiased text-base sm:text-lg text-pink font-bold flex-none mt-3 z-10 relative hover:scale-105 hover:left-2"
+      class="text-shadow block font-base antialiased text-base sm:text-lg text-pink-lt font-bold flex-none mt-3 z-10 relative hover:scale-105 hover:left-2"
       href={href}
     >
       » Read More
