--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -296,7 +296,7 @@ import committee from '@data/committee.json';
                   href={honk.url}
                 >
                   <div class="block border-navy border-4 rounded-xl w-80 relative top-4 text-2xl transition ease-in-out hover:bg-navy hover:bg-opacity-100 hover:scale-105">
-                    <span class="inline-block relative bottom-4 bg-cobalt px-2 rounded-xl bg-opacity-90 text-pink">
+                    <span class="inline-block relative bottom-4 bg-cobalt px-2 rounded-xl bg-opacity-90 text-pink-lt">
                       {honk.name}
                     </span>
                   </div>
