Head | Remove Netlify Identity

--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -14,7 +14,7 @@ const { title = '' } = Astro.props;
 />
 
 <OpenGraph />
-<NetlifyIdentity />
+<!-- <NetlifyIdentity /> -->
 
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
