--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -9,7 +9,7 @@ import sponsors from '@data/sponsors.json';
 
 <BaseLayout title="Donate">
   <div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
-    <div class="w-full md:w-1/3">
+    <div class="w-full md:w-1/3 flex flex-col gap-5">
       <div class="content-container">
         <div class="flex flex-col items-center gap-y-5 my-2">
           <a
@@ -48,6 +48,17 @@ import sponsors from '@data/sponsors.json';
             </p>
           </a>
         </div>
+      </div>
+      <div class="content-container flex flex-col items-center">
+        <Title title="#GivingTuesday 2022" />
+        <iframe
+          width="300"
+          height="500"
+          src="https://www.wagives.org/forms/honk-fest-west?id=ajcqcf&embed=donation_widget"
+          scrolling="no"
+          marginHeight="0"
+          marginWidth="0"
+          frameBorder="0"></iframe>
       </div>
     </div>
     <div class="w-full md:w-2/3">
