Home | Promote Giving Tuesday campaign

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { Image } from '@astrojs/image/components';
 import BaseLayout from '@layouts/BaseLayout.astro';
 import PostBlurb from '@components/post-blurb/PostBlurb.astro';
 import LinkBlurb from '@components/LinkBlurb.astro';
+import GivingTuesday from '@components/home/GivingTuesday.astro';
 
 import Title from '@components/Title.astro';
 import NewsletterForm from '@components/NewsletterForm.astro';
@@ -65,6 +66,10 @@ const postColumns = (index) => {
         </article>
       ))
     }
+
+    <section class="col-span-6 content-container sm:flex">
+      <GivingTuesday />
+    </section>
 
     <!-- LINK BLURBS -->
     <section class="col-span-6 md:col-span-2 content-container">
