Portal | Update drive links

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -246,8 +246,15 @@ import '@styles/global.css';
                     <li class="py-3">
                       <a
                         class="font-semibold text-blue-500 hover:text-blue-600"
-                        href="https://drive.google.com/drive/folders/0AEyL2GDYHnWVUk9PVA"
-                        >Marketing | Outreach</a
+                        href="https://drive.google.com/drive/u/1/folders/0AEyL2GDYHnWVUk9PVA"
+                        >Marketing | Media</a
+                      >
+                    </li>
+                    <li class="py-3">
+                      <a
+                        class="font-semibold text-blue-500 hover:text-blue-600"
+                        href="https://drive.google.com/drive/u/1/folders/0AI8-76ec1Ta1Uk9PVA"
+                        >Outreach</a
                       >
                     </li>
                     <li class="py-3">
