Portal | Update link to board structure doc

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -162,8 +162,8 @@ import '@styles/global.css';
                     <li class="py-3">
                       <a
                         class="font-semibold text-blue-500 hover:text-blue-600"
-                        href="https://docs.google.com/presentation/d/1tQGNzsrtN5ZFZs0JT_3Y5U5V4lKf50KJN7TB6mYzrDY/edit?usp=sharing"
-                        >Board Structure</a
+                        href=" https://docs.google.com/presentation/d/1b45ZwCoYzC6n4J3hrYT291xhrQHQ6RwAEItPAPrli9Y/edit?usp=sharing">
+                          Board Structure</a
                       >
                     </li>
                     <li class="py-3">
