--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -11,25 +11,46 @@ import BackToTop from '@components/BackToTop.astro';
     <p class="content mb-5">
       Want to see what our photographer, Tobin Holliday, captured for the day?
       <a class="block" href="http://www.tobinholliday.com/honkfest-west">
-        http://www.tobinholliday.com/honkfest-west
+        2021
       </a>
     </p>
-    <p class="content mb-5">
+    <p class="content">
       What about the enthusiastically dapper photographer, Espresso Buzz?
-      <br />
-      <a href="https://www.espressobuzz.net/Events/2021/09-18-Honk/"> 2021</a>,
-      <a href="https://www.espressobuzz.net/Events/2022/Honkfest"> 2022</a>
     </p>
+    <ul class="content mb-5">
+      <li>
+        <a
+          class="text-xl"
+          href="https://www.espressobuzz.net/Events/2022/Honkfest"
+        >
+          2022</a
+        >
+      </li>
+      <li>
+        <a href="https://www.espressobuzz.net/Events/2021/09-18-Honk/"> 2021</a>
+      </li>
+    </ul>
+
     <p class="content">
       And, as always, our very own Charlie Daniels has his immersive videos on
       YouTube for your viewing pleasure:
-      <a
-        class="block"
-        href="https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn"
-      >
-        https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn
-      </a>
     </p>
+    <ul class="content">
+      <li>
+        <a
+          class="text-xl"
+          href="https://www.youtube.com/playlist?list=PLL7ppauF4Zjo49-V7tSZ-abxuueP-deBt"
+          >2022</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn"
+        >
+          2021
+        </a>
+      </li>
+    </ul>
   </section>
 
   <section class="content-container mb-4 sm:mb-6">
