--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,8 +6,8 @@ import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
 import CommitteePhotos from '@components/about/CommitteePhotos.astro';
 import CommitteeRoles from '@components/about/CommitteeRoles.astro';
+import HonkFamily from '@components/about/HonkFamily.astro';
 
-import family from '@data/honk-family.json';
 import emails from '@data/email-addresses.json';
 ---
 
@@ -183,33 +183,7 @@ import emails from '@data/email-addresses.json';
     </section>
 
     <!-- HONK! FAMILY -->
-    <div id="family" class="grid grid-cols-1 gap-5">
-      {
-        Object.keys(family).map((continent) => (
-          <section class="content-container">
-            <BackToTop />
-            <Title title={`HONK! Family - ${continent}`} center={true} />
-            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-7 w-full content my-4 sm:my-5">
-              {family[continent].map((honk) => (
-                <a
-                  class="font-bold block w-full flex flex-col text-center items-center"
-                  href={honk.url}
-                >
-                  <div class="block border-navy border-4 rounded-xl w-80 relative top-4 text-2xl transition ease-in-out hover:bg-navy hover:bg-opacity-100 hover:scale-105">
-                    <span class="inline-block relative bottom-4 bg-cobalt px-2 rounded-xl bg-opacity-90 text-pink-lt">
-                      {honk.name}
-                    </span>
-                  </div>
-                  <span class="block bg-cobalt px-2 z-10 text-gray-200 rounded-xl bg-opacity-90">
-                    {honk.location}
-                  </span>
-                </a>
-              ))}
-            </div>
-          </section>
-        ))
-      }
-    </div>
+    <HonkFamily />
   </div>
 </BaseLayout>
 
