--- a/src/components/about/HonkFamily.astro
+++ b/src/components/about/HonkFamily.astro
@@ -2,6 +2,7 @@
 import { notion } from '@lib/notion_cms/client';
 import BackToTop from '@components/BackToTop.astro';
 import Title from '@components/Title.astro';
+import Notion from '@data/notion.yml';
 
 function group_regions(regions) {
   return regions.reduce((groups, festival) => {
@@ -21,7 +22,7 @@ function group_regions(regions) {
 }
 
 const family = await notion.databases
-  .query({ database_id: import.meta.env.HONK_FAMILY_DB_ID })
+  .query({ database_id: Notion.HONK_FAMILY_DB_ID })
   .then((response) => group_regions(response.results))
   .catch((err) => console.log(err));
 ---
