--- a/src/components/volunteer/OpenPositions.astro
+++ b/src/components/volunteer/OpenPositions.astro
@@ -5,7 +5,7 @@ import Title from '@components/Title.astro';
 import Notion from '@data/notion.yml';
 
 const query = {
-  database_id: Notion.VOLUNTEER_POSITIONS_DB_ID,
+  database_id: Notion.VOLUNTEER_POSITIONS,
   filter: {
     property: 'Open',
     checkbox: {
