--- a/src/components/about/CommitteePhotos.astro
+++ b/src/components/about/CommitteePhotos.astro
@@ -4,7 +4,7 @@ import { notion } from '@lib/notion_cms/client';
 import Notion from '@data/notion.yml';
 
 const query = {
-  database_id: Notion.COMMITTEE_MEMBERS_DB_ID,
+  database_id: Notion.COMMITTEE_MEMBERS,
   filter: {
     property: 'Image URL',
     url: {
