--- a/src/components/about/ContactUs.astro
+++ b/src/components/about/ContactUs.astro
@@ -1,5 +1,5 @@
 ---
-import { notion } from '@lib/notion_cms/client';
+import { notion } from '@lib/notion';
 import Notion from '@data/notion.yml';
 
 const emails = await notion.databases
