--- a/src/components/about/HonkFamily.astro
+++ b/src/components/about/HonkFamily.astro
@@ -1,5 +1,5 @@
 ---
-import { notion } from '@lib/notion_cms/client';
+import { notion } from '@lib/notion';
 import BackToTop from '@components/BackToTop.astro';
 import Title from '@components/Title.astro';
 import Notion from '@data/notion.yml';
