--- a/src/components/about/CommitteeRoles.astro
+++ b/src/components/about/CommitteeRoles.astro
@@ -1,5 +1,5 @@
 ---
-import { notion } from '@lib/notion_cms/client';
+import { notion } from '@lib/notion';
 import Notion from '@data/notion.yml';
 
 const members_db_id = Notion.COMMITTEE_MEMBERS;
