--- a/src/pages/media.astro
+++ b/src/pages/media.astro
@@ -2,70 +2,20 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
+import PhotosVideo from '@components/media/PhotosVideo.astro';
+import Articles from '@components/media/Articles.astro';
 ---
 
 <BaseLayout title="Media">
   <section class="content-container mb-4 sm:mb-6">
     <BackToTop />
     <Title title="Photos & Video" />
-    <p class="content mb-5">
-      Want to see what our photographer, Tobin Holliday, captured for the day?
-      <a class="block" href="http://www.tobinholliday.com/honkfest-west">
-        2021
-      </a>
-    </p>
-    <p class="content">
-      What about the enthusiastically dapper photographer, Espresso Buzz?
-    </p>
-    <ul class="content mb-5">
-      <li>
-        <a
-          class="text-xl"
-          href="https://www.espressobuzz.net/Events/2022/Honkfest"
-        >
-          2022</a
-        >
-      </li>
-      <li>
-        <a href="https://www.espressobuzz.net/Events/2021/09-18-Honk/"> 2021</a>
-      </li>
-    </ul>
-
-    <p class="content">
-      And, as always, our very own Charlie Daniels has his immersive videos on
-      YouTube for your viewing pleasure:
-    </p>
-    <ul class="content">
-      <li>
-        <a
-          class="text-xl"
-          href="https://www.youtube.com/playlist?list=PLL7ppauF4Zjo49-V7tSZ-abxuueP-deBt"
-          >2022</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn"
-        >
-          2021
-        </a>
-      </li>
-    </ul>
+    <PhotosVideo />
   </section>
 
   <section class="content-container mb-4 sm:mb-6">
     <BackToTop />
     <Title title="Articles" />
-
-    <ul class="content">
-      <li>
-        Snyder, A. & Allen, E. & Garofalo, R., (2022) “HONK!United: A Virtual
-        Global Festival of Activist Brass Bands during the COVID-19 Pandemic”,
-        Music & Politics 16(1). doi:
-        <a href="https://doi.org/10.3998/mp.2337">
-          https://doi.org/10.3998/mp.2337
-        </a>
-      </li>
-    </ul>
+    <Articles />
   </section>
 </BaseLayout>
